--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
     integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
     crossorigin="anonymous"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="./connector.js"></script>
   <script src="./script.js"></script>
 
 </head>
@@ -30,6 +32,7 @@
       flex-direction: column;
       justify-content: flex-end;
       background: #000000d1;">
+      <img src="./logo.png" class="m-3" style="object-fit: contain;" alt="" srcset="">
         <div class="p-3">
           <input class="form-control w-100" type="number" id="inputNumber">
         </div>
